--- a/package.json
+++ b/package.json
@@ -25,19 +25,21 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
-    "mysql2": "^3.14.1",
+    "mysql2": "^2.3.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.24"
+    "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
